Added styling in plain CSS

--- a/index.html
+++ b/index.html
@@ -16,5 +16,54 @@
     </ul>
 </nav>
 
+
+
+<table>
+    <tr>
+        <th>
+            Cookies
+        </th>
+        <th>
+            Weight
+        </th>
+        <th>
+            Calories
+        </th>
+    </tr>
+    <tr>
+        <td>
+            Cookies
+        </td>
+        <td>
+            Weight
+        </td>
+        <td>
+            Calories
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Cookies
+        </td>
+        <td>
+            Weight
+        </td>
+        <td>
+            Calories
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Cookies
+        </td>
+        <td>
+            Weight
+        </td>
+        <td>
+            Calories
+        </td>
+    </tr>
+</table>
+
 </body>
 </html>
